# service-intervals

./: Cargo.toml
data/: service-intervals.json
src/: errors.rs  lib.rs  main.rs
src/db/: mod.rs
src/garmin/: activities.rs  activity_csv.rs  mod.rs
