[package]
name = "service_intervals"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.11", features = ["derive"] }
csv = "1.3.0"
humantime = "2.1.0"
humantime-serde = "1.1.1"
resolve-path = "0.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "1.0.63"
